--- a/front/src/style/location.css
+++ b/front/src/style/location.css
@@ -1,39 +1,16 @@
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  font-family: arial;
-  font-size: 20px;
-  height: 80px;
-  outline: solid 2px #a7a7a7;
-}
-
-.header-row {
-  display: flex;
-  justify-content: space-between;
-  margin: 5px 0;
-}
-
-.header-item {
-  height: 100%;
-  width: 100%;
-  text-align: center;
-}
-
 .body {
-  flex-grow: 0.8;
+  flex: 0.8;
   border-radius: 10px;
   padding: 15px;
   margin: 15px;
-  background-color: #f0f0f0;
+  background-color: rgb(45, 41, 41);
   color: #fff;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+body {
+  background-color: #4b4949;
+  color: white;
 }
