--- a/front/src/style/Left.css
+++ b/front/src/style/Left.css
@@ -1,8 +1,17 @@
 aside {
   flex: 0.2;
+  margin-left: 20px;
 }
 button {
   background-color: blue;
   color: white;
   padding: 10px;
+}
+
+p{
+  background-color: #6d6d6d;
+  border-radius: 5px;
+  margin: 5px;
+  height: 50px;
+  font-size: 20px;
 }
