--- a/front/src/style/location.css
+++ b/front/src/style/location.css
@@ -1,12 +1,31 @@
 .body {
   flex: 0.8;
+  flex-direction: column;
   border-radius: 10px;
   padding: 15px;
   margin: 15px;
   background-color: rgb(45, 41, 41);
+  align-items: center;
   color: #fff;
   display: flex;
-  flex-wrap: wrap;
+}
+
+.topPart, .bottomPart {
+  margin-top: 50px;
+  display: flex;
+}
+
+.bottomPart{
+  margin-right: 300px;
+}
+
+.build{
+  width: 400px;
+  height: 80px; 
+  background-color: #a6bfcf;
+  border: 1px solid #a7a7a7;
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
 
