--- a/front/src/style/Left.css
+++ b/front/src/style/Left.css
@@ -17,6 +17,17 @@ button:hover{
   color: #212121;
 }
 
+.cctvbtn {
+  background-color: #038f03;
+  color: white;
+  display: flex;
+  magin-top: 40px;
+  margin-left: 5px;
+  font-size: 30px;
+  border-radius: 5px;
+  padding: 10px;
+}
+
 .textnum{
   display: flex; 
   justify-content: space-between;
