--- a/front/src/style/Left.css
+++ b/front/src/style/Left.css
@@ -27,3 +27,22 @@ button:hover{
   border-radius: 5px;
   padding: 10px;
 }
+
+td{
+  color:black;
+  text-align:center;
+  padding-left:8px;
+}
+tr{
+  height:30px;
+  border-bottom:1px solid #d1d1d1 ;
+}
+
+table             { 
+  border-collapse: collapse; 
+  background:white;
+  border-radius:3px;
+  overflow:hidden;
+  max-width:800px; 
+  width:260px;
+}
