--- a/front/src/style/location.css
+++ b/front/src/style/location.css
@@ -4,6 +4,7 @@
   border-radius: 5px;
   padding: 15px;
   margin: 15px;
+  margin-top: 95px;
   background-color: rgb(45, 41, 41);
   align-items: center;
   justify-content: center;
