--- a/front/src/style/Footer.css
+++ b/front/src/style/Footer.css
@@ -1,14 +1,4 @@
-.wid{
-    display: flex;
-    justify-content: space-between;
-}
-
-button {
-    background-color: #4b4949;
-    color: white;
-    display: flex; 
-    margin-top: 20px;
-    margin-left: 5px;
-    font-size: 15px;
-    border:none;
+.num{
+    color:white;
+    font-weight: 500;
   }
