--- a/front/src/style/Header.css
+++ b/front/src/style/Header.css
@@ -6,6 +6,7 @@ header {
   height: 50px;
   justify-content: center;
   align-items: center;
+  white-space: pre-wrap;
   display: flex;
   color: #000000;
   font-size: x-large;
